objects/BMCServiceDesk__ScanTargetList__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__MarkAsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the scan target list has been deleted or not.</description>
        <label>Mark As Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargeListName__c</fullName>
        <description>To store the name of the scan target list.</description>
        <label>Targe List Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TargetListId__c</fullName>
        <description>To store the Id of the scan target list.</description>
        <label>Target List Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Scan Target List</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Target Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>